--- a/files.ipynb
+++ b/files.ipynb
@@ -2,35 +2,285 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Users/José Antonio/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Clave Zona Metropolitana</th>\n",
+       "      <th>Nombre Zona Metropolitana</th>\n",
+       "      <th>PM10</th>\n",
+       "      <th>PM2.5</th>\n",
+       "      <th>SO2</th>\n",
+       "      <th>CO</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>COV</th>\n",
+       "      <th>NH3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>19.01</td>\n",
+       "      <td>Monterrey</td>\n",
+       "      <td>14,157</td>\n",
+       "      <td>9,091</td>\n",
+       "      <td>11,809</td>\n",
+       "      <td>342,779</td>\n",
+       "      <td>122,766</td>\n",
+       "      <td>157,911</td>\n",
+       "      <td>10,595</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Clave Zona Metropolitana  Nombre Zona Metropolitana      PM10    PM2.5   \\\n",
+       "41                     19.01                  Monterrey   14,157    9,091    \n",
+       "\n",
+       "        SO2         CO        NOX        COV       NH3   \n",
+       "41   11,809    342,779    122,766    157,911    10,595   "
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "pd.read_csv(\"5. Emisiones por Zona Metropolitana.csv\")"
+    "ZMM = pd.read_csv(\"5. Emisiones por Zona Metropolitana.csv\", encoding = \"iso-8859-1\")\n",
+    "ZMM[ZMM[\" Nombre Zona Metropolitana \"] == \"Monterrey\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado              object\n",
+      "Clave municipal    float64\n",
+      "Municipio           object\n",
+      "  PM10             float64\n",
+      "  PM2.5            float64\n",
+      "  SO2              float64\n",
+      "  CO               float64\n",
+      "  NOX              float64\n",
+      "  COV              float64\n",
+      "  NH3              float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "Municipios = pd.read_csv(\"4. Emisiones por Municipio.csv\", encoding = \"iso-8859-1\")\n",
+    "municipios_ZMM = [\n",
+    "    \"Apodaca\",\n",
+    "    \"Cadereyta Jiménez\",\n",
+    "    \"El Carmen\",\n",
+    "    \"Ciénega de Flores\",\n",
+    "    \"García\",\n",
+    "    \"San Pedro Garza García\",\n",
+    "    \"General Escobedo\",\n",
+    "    \"General Zuazua\",\n",
+    "    \"Guadalupe\",\n",
+    "    \"Juárez\",\n",
+    "    \"Monterrey\",\n",
+    "    \"Pesquería\",\n",
+    "    \"Salinas Victoria\",\n",
+    "    \"San Nicolás de los Garza\",\n",
+    "    \"Santa Catarina\",\n",
+    "    \"Santiago\"\n",
+    "]\n",
+    "\n",
+    "# Aplicando el filtro correctamente\n",
+    "filtro = (Municipios[\"Estado\"] == \"Nuevo León\") & (Municipios[\"Municipio\"].isin(municipios_ZMM))\n",
+    "Municipios = Municipios[filtro]\n",
+    "\n",
+    "# Limpiar y convertir las columnas relevantes a float\n",
+    "def convertir_a_float(col):\n",
+    "    if col.dtype == \"object\":\n",
+    "        col = col.str.replace(\",\", \"\", regex=True)  # Eliminar comas\n",
+    "        col = pd.to_numeric(col, errors=\"coerce\")  # Convertir a float, manejando errores\n",
+    "    return col\n",
+    "\n",
+    "# Reemplazar las columnas originales usando assign\n",
+    "Municipios = Municipios.assign(**{\n",
+    "    col: convertir_a_float(Municipios[col]) for col in Municipios.iloc[:, 3:].columns\n",
+    "})\n",
+    "\n",
+    "# Confirmar el tipo de datos después de la conversión\n",
+    "print(Municipios.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contaminante</th>\n",
+       "      <th>Valor máximo</th>\n",
+       "      <th>Porcentaje de presencia del contaminante</th>\n",
+       "      <th>Municipio correspondiente</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PM10</td>\n",
+       "      <td>2400.41</td>\n",
+       "      <td>16.98</td>\n",
+       "      <td>Monterrey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>1614.15</td>\n",
+       "      <td>17.78</td>\n",
+       "      <td>Monterrey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SO2</td>\n",
+       "      <td>8736.24</td>\n",
+       "      <td>73.98</td>\n",
+       "      <td>Cadereyta Jiménez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CO</td>\n",
+       "      <td>119590.94</td>\n",
+       "      <td>34.99</td>\n",
+       "      <td>Monterrey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NOX</td>\n",
+       "      <td>38001.98</td>\n",
+       "      <td>31.08</td>\n",
+       "      <td>Monterrey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>COV</td>\n",
+       "      <td>38909.20</td>\n",
+       "      <td>24.78</td>\n",
+       "      <td>Monterrey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NH3</td>\n",
+       "      <td>2118.66</td>\n",
+       "      <td>20.22</td>\n",
+       "      <td>Pesquería</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Contaminante  Valor máximo  Porcentaje de presencia del contaminante  \\\n",
+       "0         PM10       2400.41                                     16.98   \n",
+       "1        PM2.5       1614.15                                     17.78   \n",
+       "2          SO2       8736.24                                     73.98   \n",
+       "3           CO     119590.94                                     34.99   \n",
+       "4          NOX      38001.98                                     31.08   \n",
+       "5          COV      38909.20                                     24.78   \n",
+       "6          NH3       2118.66                                     20.22   \n",
+       "\n",
+       "  Municipio correspondiente  \n",
+       "0                 Monterrey  \n",
+       "1                 Monterrey  \n",
+       "2         Cadereyta Jiménez  \n",
+       "3                 Monterrey  \n",
+       "4                 Monterrey  \n",
+       "5                 Monterrey  \n",
+       "6                 Pesquería  "
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contaminantes = Municipios.iloc[:, 3:].max(axis=0)\n",
+    "\n",
+    "lista = []\n",
+    "for index in Municipios.iloc[:, 3:].idxmax(axis=0).values:\n",
+    "    lista.append(Municipios[\"Municipio\"].filter(items=[index], axis=0).values[0])\n",
+    "\n",
+    "tabla = pd.DataFrame({\"Contaminante\": contaminantes.index, \n",
+    "                      \"Valor máximo\": contaminantes.values, \n",
+    "                      \"Porcentaje de presencia del contaminante\": np.round(contaminantes.values * 100 / Municipios.iloc[:, 3:].sum(axis = 0).values, 2), \n",
+    "                      \"Municipio correspondiente\": lista})\n",
+    "tabla"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   }
  },
