--- a/files.ipynb
+++ b/files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "41   11,809    342,779    122,766    157,911    10,595   "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,13 +71,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "ZMM = pd.read_csv(\"5. Emisiones por Zona Metropolitana.csv\", encoding = \"iso-8859-1\")\n",
+    "ZMM = pd.read_csv(\"Files/5. Emisiones por Zona Metropolitana.csv\", encoding = \"iso-8859-1\")\n",
     "ZMM[ZMM[\" Nombre Zona Metropolitana \"] == \"Monterrey\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "Municipios = pd.read_csv(\"4. Emisiones por Municipio.csv\", encoding = \"iso-8859-1\")\n",
+    "Municipios = pd.read_csv(\"Files/4. Emisiones por Municipio.csv\", encoding = \"iso-8859-1\")\n",
     "municipios_ZMM = [\n",
     "    \"Apodaca\",\n",
     "    \"Cadereyta Jiménez\",\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "6                 Pesquería  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
