--- a/Analisis_Series_Tiempo.ipynb
+++ b/Analisis_Series_Tiempo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "<module 'EDA' from 'c:\\\\Users\\\\José Antonio\\\\Documents\\\\TEC\\\\Python\\\\Multivariados\\\\Funciones\\\\EDA.py'>"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "[594 rows x 18 columns]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,17 +669,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\José Antonio\\Documents\\TEC\\Python\\Multivariados\\Funciones\\EDA.py:143: UserWarning:\n",
-      "\n",
-      "FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
-      "\n"
+      "c:\\Users\\José Antonio\\Documents\\TEC\\Python\\Multivariados\\Funciones\\EDA.py:143: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "  fig.show()\n"
      ]
     },
     {
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3312,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3379,7 +3377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
